      apply to new upstream source
    - Dropped debian-changes-7.3.50~cvs20110627-1 as it's purpose was
      totally unclear: there was no real patch description, and the
      changelog from the relevant upload made no mention of any of the changes
  * Drop libgdb-dev, since libgdb.a was dropped upstream.
  * Update architecture list for gdbserver.

 -- Samuel Bronson <naesten@gmail.com>  Mon, 28 Jan 2013 21:47:49 -0500

gdb (7.4.1-1) unstable; urgency=low

  * New upstream release:
    - [GDB/MI] Error when resuming program execution in all-stop mode
      ("Cannot execute this command without a live selected thread").
    - [Pascal] Polluted display of class methods parameters.
    - [target remote] Errror when connecting to remote target where
      disconnected tracing is in effect.
    - [AVX] Float and ymm* register values not available.
    - [GDB] Crash when using the "finish" command.
    - [build] makeinfo should not be required to build GDB.
  * d/control: enable gdb-multiarch packages
  * d/rules: disable simulator for gdb-multiarch builds.

 -- Hector Oron <zumbi@debian.org>  Thu, 26 Apr 2012 18:26:18 +0200

gdb (7.4really-1) unstable; urgency=low

  * New upstream release:
    - Many Python scripting improvements
    - Better support for ambiguous linespecs
    - Masked watchpoints
    - Tracepoint support improvements
    - Support for Texas Instruments TMS320C6x (tic6x-*-*)
    - A Renesas RL78 simulator (rl78-*-elf)
    - Some minor Remote protocol extensions and GDB/MI changes
  * Temporarily disable gdb-multiarch and gdb-dbg.

 -- Hector Oron <zumbi@debian.org>  Sat, 28 Jan 2012 00:41:20 +0100

gdb (7.4-1~cvs20111117.2) experimental; urgency=low

  * Add build dependency on lib64ncurses5-dev for multilib targets. 

 -- Hector Oron <zumbi@debian.org>  Fri, 18 Nov 2011 19:35:17 +0000

gdb (7.4-1~cvs20111117.1) experimental; urgency=low

  * Add accidentally dropped armhf to architecture list
  * Add GDB debug package (Closes: #592512, #490049)