@@ -46,7 +46,7 @@ Description: The GNU Debugger
 Package: gdb64
 Architecture: i386 powerpc s390 sparc
 Section: devel
-Depends: ${shlibs:Depends}, gdb(= ${binary:Version}), ${misc:Depends}
+Depends: ${shlibs:Depends}, gdb (= ${binary:Version}), ${misc:Depends}
 Description: The GNU Debugger (64-bit)
  GDB is a source-level debugger, capable of breaking programs at
  any specific line, displaying variable values, and determining
@@ -57,7 +57,7 @@ Description: The GNU Debugger (64-bit)
 Package: gdb-multiarch
 Architecture: any
 Section: devel
-Depends: ${shlibs:Depends}, gdb , ${misc:Depends}
+Depends: ${shlibs:Depends}, gdb (= ${binary:Version}), ${misc:Depends}
 Description: The GNU Debugger (with support for multiple architectures)
  GDB is a source-level debugger, capable of breaking programs at
  any specific line, displaying variable values, and determining
@@ -87,7 +87,7 @@ Description: The GNU Debugger (remote server)
 Package: gdb-source
 Architecture: all
 Section: devel
-Depends: ${misc:Depends}, gdb
+Depends: ${misc:Depends}
 Description: The GNU Debugger (source)
  GDB is a source-level debugger, capable of breaking programs at
  any specific line, displaying variable values, and determining
