@@ -1,0 +1,12 @@
+#! /bin/sh
+set -e
+
+# Delete symlink that will be replaced by a directory
+docdir="/usr/share/doc/gdb-source"
+if [ -L $docdir ]; then
+    rm $docdir 2>/dev/null
+fi
+
+#DEBHELPER#
+
+exit 0
